level-6-networking/labs/lab-6.3-ingress/00-setup.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  labels:
    lab: "6.3"
